--- a/package.json
+++ b/package.json
@@ -22,11 +22,17 @@
     "@angular/forms": "~13.3.0",
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
+    "@angular-devkit/build-angular": "~13.3.5",
+    "@angular/compiler-cli": "~13.3.0",
+    "@angular/cli": "~13.3.5",
     "@angular/router": "~13.3.0",
+    "express": "^4.18.1",
+    "path": "^0.12.7",
     "primeicons": "^5.0.0",
     "primeng": "^13.3.3",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
+    "typescript": "~4.6.2",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
