--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
     "express": "^4.18.1",
+    "ngx-spinner": "^13.1.1",
     "path": "^0.12.7",
     "primeicons": "^5.0.0",
     "primeng": "^13.3.3",
