--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@angular/platform-browser": "~13.3.0",
     "@angular/platform-browser-dynamic": "~13.3.0",
     "@angular/router": "~13.3.0",
+    "angular-csv-ext": "^1.0.5",
     "express": "^4.18.1",
     "ngx-spinner": "^13.1.1",
     "path": "^0.12.7",
